--- a/install
+++ b/install
@@ -74,7 +74,7 @@ echo -e "\033[1;33m- - - - -> \033[01;34mSU IP HOST:\033[0m $ip"
 sleep 1
 echo -e "\033[1;31mReinicie su VPS (Opcional) - sudo reboot"
 sleep 2
-echo -e "\033[1;33m- - ->>C A N A L \033[01;34mhttp://t.me/PwrMX"
-echo -e "\033[1;33m- - ->>Modulo VPSPack \033[01;34m@PowerMX"
+echo -e "\033[1;33m- - ->>Blog \033[01;34mhttps://tekaxenlinea.blogspot.com/"
+echo -e "\033[1;33m- - ->>Creditos \033[01;34mNetFree Mx"
 sleep 1
 rm install
